<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/problemSolverView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="15dp"
        android:text="@string/problemSolverWelcome"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />
    <TextView
        android:id="@+id/problemSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="15dp"
        android:text="@string/selectProblem"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemSolverView"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/farmerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:backgroundTint="#2196F3"
        android:onClick="launchFWGC"
        android:text="@string/openFWGC"
        app:layout_constraintBottom_toTopOf="@+id/puzzleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemSelect" />

    <Button
        android:id="@+id/puzzleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:backgroundTint="#2196F3"
        android:onClick="launchPuzzle"
        android:text="@string/openPuzzle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/problemSelect"
        app:layout_constraintVertical_bias="0.466" />



</androidx.constraintlayout.widget.ConstraintLayout>